--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,24 +1,10 @@
 body{
-  margin: 0;
-  padding-top:40px;
-
-
-}
-.cedi-field{
-  margin-bottom: 5px;
-  margin-top: 5px;
-}
-.cal{
   padding: 10px;
-  width: 300px;
-  margin: auto;
+}
+.tax-info{
+  display:grid;
 
 }
-@media (max-width:375px){
-  .cal{
-    padding: 10px;
-    width: 100%;
-
-  }
+.tax-info div{
 
 }
