--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,13 +1,156 @@
 body{
-  padding: 10px;
+  margin: 0;
+  background-color: #e6e0e5;
 }
-.tax-info{
-  display:grid;
+*{
+  box-sizing: border-box;
+  font-family: arial;
+}
+.app{
+  margin:50px 10px;
+  border: 1px solid #ccc;
+  padding: 0px 15px 15px 15px;
+  border-radius: 5px;
+  background-color: #fff;
 
 }
-.tax-info div{
+.country{
+ position: relative;
+ display: block;
+ width: 80px;
+ margin: auto;
+}
+
+
+img{
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  top:-40px;
+  border-radius: 50%;
+  border-top: 2px solid #ccc;
 
 }
-h2{
-  color: #db6140;
+.main h3{
+  margin-top: 50px;
+  text-align: center;
+}
+.cal{
+  font-family:sans,arial;
+  position: relative;
+}
+
+
+.cash-input{
+
+ margin-bottom: 10px;
+}
+
+.sp{
+  height: 100%;
+  border: 2px solid #eee;
+  border-right: none;
+  padding: 9px 5px;
+  width: 20%;
+}
+.cash-input input[type='number']{
+  width: 80%;
+  border: 2px solid #eee;
+  padding: 10px 6px;
+}
+.cash-input input[type='number']:focus{
+    border: 2px solid #ccc;
+}
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 18px;
+  margin-top: 10px;
+
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.desc{
+  font-weight:bold;
+  font-size: 16px;
+  font-family: arial;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+@media (min-width:500px){
+  .app{
+    width:500px;
+    margin: 80px auto;
+  }
+
+  .cal{
+
+  }
+  .cash-input input[type='number']{
+    width: 70%;
+  }
+  .cash-input{
+   flex-flow:row wrap;
+   display: flex;
+  }
+  .cash-input div{
+    flex-basis: calc(50% - 10px);
+
+  }
+
+
+
 }
